<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- ViewPager2 for Fullscreen Photo Swiping -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/photoViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Top Floating Glass Toolbar -->
    <LinearLayout
        android:id="@+id/topBar"
        style="@style/Widget.LievisCam.GlassPill"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnClose"
            style="@style/Widget.LievisCam.GlassCircle"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/tvCounter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="1 / 10" />

        <ImageButton
            android:id="@+id/btnShare"
            style="@style/Widget.LievisCam.GlassCircle"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:contentDescription="@string/action_share"
            android:src="@drawable/ic_share" />

        <ImageButton
            android:id="@+id/btnDelete"
            style="@style/Widget.LievisCam.GlassCircle"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/action_delete"
            android:src="@drawable/ic_delete"
            app:tint="@color/score_red" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
